This pr allows users to upload multiple images and a image carousel on single page view.
In addition, the existing CSS has been reorganized and migrated into a structured SCSS setup.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sass:watch": "sass styles/scss/styles.scss styles/css/styles.css --watch",
+    "sass:build": "sass styles/scss/styles.scss styles/css/styles.css --style compressed"
   },
   "devDependencies": {
     "vite": "^7.2.2"
